--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -30,10 +30,9 @@ body {
 
 .content-converter {
   .convertee {
-    display:inline-block;
-    position:relative;
     width:100%;
     max-width:550px;
+    margin:0 auto;
 
     &.raw {
       textarea {
