Removed the magical typed, as it adds complexity to interaction, especially on mobile.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,6 +9,10 @@ description: Type a long tweet and 5Tweets will rewrite it into multilpe tweets.
   .content-item.content-converter
     .convertee.raw
       %textarea#raw
+        :preserve
+          I recently wrote my first long tweet and struggled to tweak & format it to make the most of 140 chars and leave room for a tweet count.
+
+          I wrote this to help me write my first long tweet. Feedback appreciated.
     .convertee.tweets#tweets
   .content-item.content-options
     .option
