Left align the tweet text for consistency with the input box.

--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -50,6 +50,7 @@ body {
 
     &.tweets {
       a.tweet {
+        text-align:left;
         display:block;
         text-decoration:none;
         color:inherit;
